ipsvd (0.9.5-1) unstable; urgency=low

  * new upstream version.
  * diff/sslio-man.diff: remove, applied upstream.
  * debian/rules: target unpack: no diff; diet CC=diet -v -Os gcc -nostdinc;
  * debian/implicit: update to revision 1.10.

 -- Gerrit Pape <pape@smarden.org>  Wed, 14 Jul 2004 19:45:14 +0000

ipsvd (0.9.4-2) unstable; urgency=low

  * debian/control: update description.
  * debian/rules: use -g -O2; target unpack: apply diff.
  * debian/diff/sslio-man.diff: new; typos.
  * debian/ipsvd.docs: add debian/README.Debian.diet.
  * debian/README.Debian.diet: new; how to build the package with the diet
    libc.

 -- Gerrit Pape <pape@smarden.org>  Mon, 21 Jun 2004 20:01:19 +0000

ipsvd (0.9.4-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Sat, 19 Jun 2004 14:51:13 +0000

ipsvd (0.9.3-1) unstable; urgency=low

  * new upstream version.
  * Build-Depends: libmatrixssl1.1-dev.

 -- Gerrit Pape <pape@smarden.org>  Wed,  2 Jun 2004 19:36:17 +0000

ipsvd (0.9.2-1) unstable; urgency=low

  * new upstream version.
  * debian/control: Build-Depends: libmatrixssl-dev (now all archs).

 -- Gerrit Pape <pape@smarden.org>  Thu, 27 May 2004 09:32:17 +0000

ipsvd (0.9.1-1) unstable; urgency=low

  * new upstream version.
  * debian/control: Build-Depends: libmatrixssl-dev [archs _it is available
    for_].

 -- Gerrit Pape <pape@smarden.org>  Mon,  3 May 2004 17:12:45 +0000

ipsvd (0.9.0-1) unstable; urgency=low

  * new upstream version.
  * debian/control: Build-Depends: libmatrixssl-dev [archs it is available
    for].
  * debian/rules: new target unpack; build, install sslio where matrixssl
    is available.
  * debian/implicit: update to revision 1.8.

 -- Gerrit Pape <pape@smarden.org>  Sat,  1 May 2004 14:09:00 +0000

ipsvd (0.8.2-1) unstable; urgency=low

  * new upstream version.

 -- Gerrit Pape <pape@smarden.org>  Mon, 23 Feb 2004 20:17:26 +0000

ipsvd (0.8.1-1) unstable; urgency=low

  * new upstream version.
